[project]
name = "diffusion"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
  "einops>=0.8.1",
  "matplotlib>=3.10.6",
  "numpy>=2.3.2",
  "pandas>=2.3.2",
  "pytest>=8.4.1",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[tool.basedpyright]
typeCheckingMode = "basic"
reportMissingTypeStubs = "warning"
reportMissingImports = "none"
reportMissingModuleSource = "none"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
